--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,6 @@ body,
 
 body {
   min-width: 320px;
-  overflow-x: hidden;
 }
 
 button,
